# turbo-chainsaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  setup.py  test_button_click.py  test_simple_command.py
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
AUR/: .SRCINFO  PKGBUILD
aur-submission/: README.md  SUBMISSION_GUIDE.md
aur-submission/fredon-menu-git/: .SRCINFO  CHANGELOG.md  LICENSE  PKGBUILD  README.md  pyproject.toml  setup.py
aur-submission/fredon-menu-git/src/data/: default.json
aur-submission/fredon-menu-git/src/menu/: config.py  launcher.py  style.css  window.py
aur-submission/fredon-menu-git/src/utils/: __init__.py  validation.py
packaging/: PKGBUILD  fredon-menu.desktop  fredon-menu.service
research/: implementation-examples.md  launcher-best-practices.md  performance-benchmarks.md
specs/001-fredon-menu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fredon-menu/checklists/: requirements.md
specs/001-fredon-menu/contracts/: config-api.md  launcher-api.md
src/: main.py
src/menu/: __init__.py  app.py  button.py  launcher.py  models.py  style.css  window.py
src/utils/: cache.py
tests/: __init__.py  run_tests.py  test_config.py
