[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fredon-menu"
dynamic = ["version"]
description = "A modern, customizable application launcher for Hyprland/Wayland"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Fredon Menu Team", email = "contact@fredon-menu.org"},
]
maintainers = [
    {name = "Fredon Menu Team", email = "contact@fredon-menu.org"},
]
keywords = ["hyprland", "wayland", "launcher", "menu", "gtk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Shells",
]
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.42.0",
    "Pillow>=9.0.0",
    "watchdog>=2.1.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
fredon-menu = "menu.app:main"

[project.urls]
Homepage = "https://github.com/patrik-fredon/fredon-menu"
Documentation = "https://fredon-menu.readthedocs.io/"
Repository = "https://github.com/patrik-fredon/fredon-menu.git"
"Bug Tracker" = "https://github.com/patrik-fredon/fredon-menu/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
menu = [
    "data/*.json",
    "data/icons/*.png",
    "data/icons/*.svg",
    "style.css",
]

[tool.setuptools_scm]
write_to = "src/menu/__init__.py"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]